# serializer version: 1
# name: TestRecordingsThatMatchPlaylistFilters.test_sorts_nulls_first_and_then_least_recently_counted
  '''
  SELECT "posthog_filesystem"."team_id",
         "posthog_filesystem"."project_id",
         "posthog_filesystem"."id",
         "posthog_filesystem"."path",
         "posthog_filesystem"."depth",
         "posthog_filesystem"."type",
         "posthog_filesystem"."ref",
         "posthog_filesystem"."href",
         "posthog_filesystem"."shortcut",
         "posthog_filesystem"."meta",
         "posthog_filesystem"."created_at",
         "posthog_filesystem"."created_by_id"
  FROM "posthog_filesystem"
  WHERE ("posthog_filesystem"."ref" = '0001'
         AND "posthog_filesystem"."team_id" = 99999
         AND "posthog_filesystem"."type" = 'session_recording_playlist')
  '''
# ---
# name: TestRecordingsThatMatchPlaylistFilters.test_sorts_nulls_first_and_then_least_recently_counted.1
  '''
  SELECT "posthog_filesystem"."team_id",
         "posthog_filesystem"."project_id",
         "posthog_filesystem"."id",
         "posthog_filesystem"."path",
         "posthog_filesystem"."depth",
         "posthog_filesystem"."type",
         "posthog_filesystem"."ref",
         "posthog_filesystem"."href",
         "posthog_filesystem"."shortcut",
         "posthog_filesystem"."meta",
         "posthog_filesystem"."created_at",
         "posthog_filesystem"."created_by_id"
  FROM "posthog_filesystem"
  WHERE ("posthog_filesystem"."ref" = '0001'
         AND "posthog_filesystem"."team_id" = 99999
         AND "posthog_filesystem"."type" = 'session_recording_playlist')
  '''
# ---
# name: TestRecordingsThatMatchPlaylistFilters.test_sorts_nulls_first_and_then_least_recently_counted.2
  '''
  SELECT "posthog_filesystem"."team_id",
         "posthog_filesystem"."project_id",
         "posthog_filesystem"."id",
         "posthog_filesystem"."path",
         "posthog_filesystem"."depth",
         "posthog_filesystem"."type",
         "posthog_filesystem"."ref",
         "posthog_filesystem"."href",
         "posthog_filesystem"."shortcut",
         "posthog_filesystem"."meta",
         "posthog_filesystem"."created_at",
         "posthog_filesystem"."created_by_id"
  FROM "posthog_filesystem"
  WHERE ("posthog_filesystem"."ref" = '0001'
         AND "posthog_filesystem"."team_id" = 99999
         AND "posthog_filesystem"."type" = 'session_recording_playlist')
  '''
# ---
# name: TestRecordingsThatMatchPlaylistFilters.test_sorts_nulls_first_and_then_least_recently_counted.3
  '''
  SELECT "posthog_filesystem"."team_id",
         "posthog_filesystem"."project_id",
         "posthog_filesystem"."id",
         "posthog_filesystem"."path",
         "posthog_filesystem"."depth",
         "posthog_filesystem"."type",
         "posthog_filesystem"."ref",
         "posthog_filesystem"."href",
         "posthog_filesystem"."shortcut",
         "posthog_filesystem"."meta",
         "posthog_filesystem"."created_at",
         "posthog_filesystem"."created_by_id"
  FROM "posthog_filesystem"
  WHERE ("posthog_filesystem"."ref" = '0001'
         AND "posthog_filesystem"."team_id" = 99999
         AND "posthog_filesystem"."type" = 'session_recording_playlist')
  '''
# ---
# name: TestRecordingsThatMatchPlaylistFilters.test_sorts_nulls_first_and_then_least_recently_counted.4
  '''
  SELECT COUNT(*) AS "__count"
  FROM "posthog_sessionrecordingplaylist"
  WHERE (NOT "posthog_sessionrecordingplaylist"."deleted"
         AND "posthog_sessionrecordingplaylist"."filters" IS NOT NULL
         AND ("posthog_sessionrecordingplaylist"."last_counted_at" IS NULL
              OR "posthog_sessionrecordingplaylist"."last_counted_at" < '2024-01-01 10:00:00+00:00'::timestamptz))
  '''
# ---
# name: TestRecordingsThatMatchPlaylistFilters.test_sorts_nulls_first_and_then_least_recently_counted.5
  '''
  SELECT "posthog_sessionrecordingplaylist"."id"
  FROM "posthog_sessionrecordingplaylist"
  WHERE (NOT "posthog_sessionrecordingplaylist"."deleted"
         AND "posthog_sessionrecordingplaylist"."filters" IS NOT NULL
         AND ("posthog_sessionrecordingplaylist"."last_counted_at" IS NULL
              OR "posthog_sessionrecordingplaylist"."last_counted_at" < '2024-01-01 10:00:00+00:00'::timestamptz))
  ORDER BY "posthog_sessionrecordingplaylist"."last_counted_at" ASC NULLS FIRST
  LIMIT 2500
  '''
# ---
